Prevent cards from shrinking to increase legibility

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -69,6 +69,6 @@ a {
 }
 
 .card {
-  max-width: 200px;
+  width: 300px;
   padding: 16px;
 }
